# the-nullary

./: .gitignore  CLAUDE.md  README.md
blogary/blogary/: package.json
blogary/blogary/src/: index.html  main.js
blogary/blogary/src-tauri/: Cargo.toml  tauri.conf.json
blogary/blogary/src-tauri/src/: main.rs
covenant/: CLAUDE.md
covenant/covenant/: package-lock.json  package.json
covenant/covenant-viewer/: package-lock.json  package.json  server.js
covenant/covenant-viewer/public/: index.html
covenant/covenant/src/: covenant-form-config.json  environment-config.js  index.html  main-no-imports.js  test-tauri.html
covenant/covenant/src-tauri/: Cargo.toml  tauri.conf.json
covenant/covenant/src-tauri/capabilities/: default.json
covenant/covenant/src-tauri/src/: lib.rs  main.rs
eventary/eventary/: package.json
eventary/eventary/src/: index.html  main.js
eventary/eventary/src-tauri/: Cargo.toml  tauri.conf.json
grocary/: CLAUDE.md
grocary/grocary/: package.json
grocary/grocary/src/: index.html  main.js  styles.css
grocary/grocary/src-tauri/: Cargo.toml  tauri.conf.json
grocary/grocary/src-tauri/src/: lib.rs  main.rs
idothis/: CLAUDE.md
idothis/idothis/: package-lock.json  package.json
idothis/idothis/src/: base-command.js  form-widget.js  index.html  main.js
idothis/idothis/src-tauri/: Cargo.toml  tauri.conf.json
idothis/idothis/src-tauri/src/: lib.rs  main.rs
lexary/: CLAUDE.md
lexary/lexary/: package.json
lexary/lexary/src/: index.html  main.js
lexary/lexary/src-tauri/: Cargo.toml  tauri.conf.json
magicard/: CLAUDE.md  test-delete-cleanup.js
magicard/magicard/: README.md  package-lock.json  package.json
magicard/magicard/src/: environment-config.js  index.html  main.js  styles.css
magicard/magicard/src-tauri/: Cargo.toml  tauri.conf.json
magicard/test-cards/: .fire-spell-card.svg.swp
mybase/: CLAUDE.md
mybase/mybase/: package-lock.json  package.json
mybase/mybase/src/: base-command.js  environment-config.js  form-widget.js  index.html  main.js  post-widget.js
mybase/mybase/src-tauri/: Cargo.toml  tauri.conf.json
mybase/mybase/src-tauri/src/: lib.rs  main.rs
nexus/: CLAUDE.md  README.md
nexus/nexus/: README.md  package-lock.json  package.json
nexus/nexus/src/: index.html  main.js
nexus/nexus/src-tauri/: Cargo.toml  tauri.conf.json
nexus/nexus/src-tauri/src/: lib.rs  main.rs  user_persistence.rs
nexus/public/: index.html
nexus/public/js/: main.js
nexus/server/: package-lock.json  package.json  server.js
ninefy/: CLAUDE.md  test-csv-parsing.js  test-menu-fix.html
ninefy/ninefy/: README.md  debug-images.html  debug-svg.html  package-lock.json  package.json  test-menu-upload.html  test-menu.csv  test-validation.html
ninefy/ninefy/src/: README-PRODUCT-FORMS.md  environment-config.js  index.html  main-no-modules.js  main.js  product-display-config.json  product-forms-config.json  stripe.js  styles.css
ninefy/ninefy/src-tauri/: Cargo.toml  tauri.conf.json
ninefy/ninefy/src-tauri/capabilities/: default.json
ninefy/ninefy/src-tauri/src/: lib.rs  main.rs
ordary/: ordary.html  package-lock.json  package.json  server.js
photary/: CLAUDE.md
photary/photary/: package.json
photary/photary/src/: index.html  main.js
photary/photary/src-tauri/: Cargo.toml  tauri.conf.json
postary/postary/: package.json
postary/postary/src-tauri/: Cargo.toml  tauri.conf.json
rhapsold/: CLAUDE.md
rhapsold/rhapsold/: debug-test.html  package.json  test-teleport-backend.html  test-workflow.html
rhapsold/rhapsold/src-tauri/: Cargo.toml  tauri.conf.json
rhapsold/rhapsold/src-tauri/src/: lib.rs  main.rs
screenary/screenary/: package-lock.json  package.json
shared/: INTEGRATION-GUIDE.md  README-BASE-SCREEN-PRODUCTION.md  README-ENVIRONMENT.md  README-OFFLINE-STATE.md  README-SYNC-STATUS.md  README-USER-PERSISTENCE.md  README.md  test-swipable-feed.html
shared/components/: base-screen-production.js  blog-preview.js  hud.js  menu-display.js  navigation.js  product-card.js  swipable-feed.js  swipe-demo.js  two-column-layout.js
shared/examples/: base-join-leave-example.js  base-switching-content-demo.js  ninefy-navigation-integration.js  ninefy-two-column-integration.js  offline-state-example.js  rhapsold-navigation-integration.js  rhapsold-two-column-integration.js  sync-status-integration-example.js
shared/feeds/: photo-feed.js  text-feed.js  video-feed.js
shared/rust/: Cargo-dependencies.toml
shared/screens/: base-screen-with-sync.js  main-screen.js  post-reading-screen.js
shared/scripts/: add-environment-config.js  add-offline-state-integration.js  add-sync-status-integration.js  add-user-persistence.js  integrate-shared-components.js  sync-shared-code.js  sync-simple-theme.js  update-base-screens.js  update-claude-md.js
shared/services/: base-command.js  base-discovery.js  environment-config.js
shared/themes/: simple-theme.js
shared/utils/: base-command-sync-integration.js  base-discovery.js  common-ui.js  environment-integration.js  form-utils.js  layered-ui.js  menu-utils.js  offline-state.js  post-creator.js  sanora-integration.js  simple-theme-integration.js  svg-utils.js  sync-status.js  theme-system.js  user-persistence-integration.js  user-persistence.js
stackchat/: CLAUDE.md  package.json  test-browser-stackchat.html  test-complete-messaging.html  test-julia-connections.html  test-julia-messaging.html  test-teleportation.html
stackchat/stackchat/: P2P-CONNECTION-TESTING.md  package-lock.json  package.json  run-second-instance.sh
stackchat/stackchat/src-tauri/: Cargo.toml  tauri.conf.json
stackchat/stackchat/src-tauri/src/: julia_integration.rs  lib.rs  main.rs
viewaris/viewaris/: README.md  package.json
viewaris/viewaris/src-tauri/: Cargo.toml  tauri.conf.json
viewaris/viewaris/src-tauri/capabilities/: default.json
viewaris/viewaris/src-tauri/src/: main.rs
viewary/: CLAUDE.md
viewary/viewary/: package.json
viewary/viewary/src-tauri/: Cargo.toml  tauri.conf.json
viewary/viewary/src-tauri/src/: lib.rs  main.rs
wikiary/: test.html  test2.html  test3.html
(+93 files in other folders)
