[package]
name = "covenant-gui"
version = "0.1.0"
description = "GUI application for magical covenant contract management"
authors = ["Planet Nine <support@planetnine.app>"]
license = "MIT"
repository = "https://github.com/planet-nine-app/planet-nine"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }
urlencoding = "2.1"
sessionless = { path = "../../../../sessionless/src/rust/crate", features = ["uuid"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
