[package]
name = "nexus"
version = "0.1.0"
description = "Nexus - Planet Nine Ecosystem Portal"
authors = ["planetnineisaspaceship"]
license = "MIT"
repository = "https://github.com/planet-nine-app/the-nullary"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"

# Planet Nine service clients
bdo-rs = { path = "../../../../bdo/src/client/rust/bdo-rs" }
dolores-rs = { path = "../../../../dolores/src/client/rust/dolores-rs" }
sanora-rs = { path = "../../../../sanora/src/client/rust/sanora-rs" }
sessionless = { path = "../../../../sessionless/src/rust/crate" }

# Additional dependencies
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }
base64 = "0.21"
chrono = { version = "0.4", features = ["serde"] }
