[package]
name = "ninefy"
version = "0.1.0"
description = "A minimalist digital goods marketplace built on The Nullary ecosystem"
authors = ["Planet Nine"]
license = "MIT"
repository = "https://github.com/planet-nine-app/planet-nine"
edition = "2021"

[lib]
name = "ninefy"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.6.2", features = [] }
tauri-plugin-shell = "2.0"
tauri-plugin-fs = "2.2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12.4", default-features = false, features = ["blocking", "json", "multipart", "rustls-tls"] }
sessionless = "0.1.1"

[dependencies.addie-rs]
path = "../../../../addie/src/client/rust/addie-rs"

[dependencies.fount-rs]
path = "../../../../fount/src/client/rust/fount-rs"

[dependencies.bdo-rs]
path = "../../../../bdo/src/client/rust/bdo-rs"

[dependencies.dolores-rs]
path = "../../../../dolores/src/client/rust/dolores-rs"

[dependencies.sanora-rs]
path = "../../../../sanora/src/client/rust/sanora-rs"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
