[package]
name = "rhapsold"
version = "0.1.0"
description = "A minimalist blogging platform built on The Nullary ecosystem"
authors = ["Planet Nine"]
license = "MIT"
repository = "https://github.com/planet-nine-app/planet-nine"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
