[package]
name = "stackchat"
version = "0.0.1"
description = "StackChat - P2P messaging via covenant service"
authors = ["Planet Nine Ecosystem"]
license = "MIT"
repository = "https://github.com/planet-nine-app/planet-nine"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["shell-open"] }
tauri-plugin-shell = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
urlencoding = "2.1.3"
hex = "0.4.3"

# Planet Nine service clients
sessionless = { path = "../../../../sessionless/src/rust/crate" }
bdo-rs = { path = "../../../../bdo/src/client/rust/bdo-rs" }
sanora-rs = { path = "../../../../sanora/src/client/rust/sanora-rs" }
julia-rs = { path = "../../../../julia/src/client/rust/julia-rs" }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
