[package]
name = "viewaris"
version = "0.1.0"
description = "A Tauri App"
authors = ["planetnineisaspaceship"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "viewaris_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-fs = "2"
reqwest = { version = "0.12.4", features = ["blocking", "json", "multipart"] }
sessionless = "0.1.1"
tauri-plugin-shell = "2"

[dependencies.fount-rs]
path = "../../../../fount/src/client/rust/fount-rs"

[dependencies.bdo-rs]
path = "../../../../bdo/src/client/rust/bdo-rs"

[dependencies.dolores-rs]
path = "../../../../dolores/src/client/rust/dolores-rs"
