[package]
name = "viewary"
version = "0.0.1"
description = "Viewary - Short-form video feed app for Planet Nine ecosystem"
authors = ["planetnineisaspaceship"]
license = "MIT"
repository = "https://github.com/planet-nine-app/the-nullary"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0", features = ["shell-open"] }
tauri-plugin-shell = "2.0"

# Planet Nine service clients
addie-rs = { path = "../../../../addie/src/client/rust/addie-rs" }
fount-rs = { path = "../../../../fount/src/client/rust/fount-rs" }
bdo-rs = { path = "../../../../bdo/src/client/rust/bdo-rs" }
dolores-rs = { path = "../../../../dolores/src/client/rust/dolores-rs" }
sessionless = { path = "../../../../sessionless/rust/sessionless" }

# Additional dependencies
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }
base64 = "0.21"